<resources>
    <string name="app_name">360手机卫士</string>
    <string name="update_dialog_title">更新提示</string>
    <string name="update_dialog_message">有新版本可用,是否立即更新</string>
    <string name="update_dialog_positivebutton">更新</string>
    <string name="update_dialog_negativebutton">取消</string>
    <string name="splash_activity_versionstr">版本名称</string>
    <string name="download_notify_title">开始下载</string>
    <string name="download_notify_text">下载中</string>
    <string name="download_finished_notify_title">下载完成</string>
    <string name="download_finished_notify_text">点击安装</string>
    <string name="download_finished_notify_ticker">下载成功</string>
    <string name="download_notify_ticker">开始下载</string>
    <string name="url_error_msg">无法连接服务器</string>
    <string name="functions">功能</string>
    <string name="pref_update">是否检测更新</string>
    <string name="pref_update_summ">设置开启卫士是否检测版本更新</string>
    <string name="settings">设置</string>
    <string name="set_password">创建密码</string>
    <string name="create_pwd">创建</string>
    <string name="cancel_pwd">取消</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="confirm">确认</string>
    <string name="input_pwd">输入密码</string>
    <string name="is_bind_sim">是否绑定sim卡</string>
    <string name="choose_contact">选择联系人</string>
    <string name="pref_comming_call_location_summ">设置是否在来电时显示来电号码归属地</string>
    <string name="pref_comming_call_location">是否开启来电归属地</string>
    <string name="pref_toast_style">设置来电归属地样式</string>
    <string name="pref_toast_style_summ">设置来电归属地吐司的样式</string>
    <string name="pref_toast_style_title">请选择对话框样式</string>
    <string name="pref_toast_style_option_default_value">0</string>
    <string name="pref_toast_position">设置来电归属地显示的位置</string>
    <string name="pref_toast_position_summ">设置Toast位置</string>
    <string name="news">cnBeta.com成立于 2003 年，是中国领先的即时科技资讯站点，已成为重要的互联网IT消息集散地，提供软件更新，互联网、IT业界资讯、评论、观点和访谈。</string>
    <string name="pref_black_list">设置黑名单</string>
    <string name="pref_black_list_summ">开启黑名单骚扰拦截功能</string>
    <string name="sms_backup">短信备份</string>
    <string name="show_system_process">显示系统进程</string>
    <string name="lock_clear">锁屏清理已开启</string>
    <string name="process_setting">进程设置</string>
    <string name="pref_app_lock">程序锁</string>
    <string name="pref_app_lock_summ">设置是否开启程序锁</string>
</resources>
