<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        style="@style/title_style"
        android:text="@string/process_setting"/>

    <CheckBox
        android:id="@+id/cb_show_system_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/show_system_process"/>

    <CheckBox
        android:id="@+id/cb_lock_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/lock_clear"/>
</LinearLayout>